[gd_scene load_steps=2 format=2]

[ext_resource path="res://Common/Detector/TargetSystem.gd" type="Script" id=1]

[node name="TargetSystem" type="Spatial"]
script = ExtResource( 1 )

[node name="UpdateTargets" type="Timer" parent="."]

[connection signal="timeout" from="UpdateTargets" to="." method="_on_UpdateTargets_timeout"]
